# photo-bot

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  start.sh  stop.sh  upload.sh
debug/: test-photoCapture.py  test-videoCapture.py
sbin/: setup.sh
src/: base_camera.py  camera_opencv.py  constants.py  index.html  photo-bot.py  rotobot_api.py
